<resources>
    <string name="app_name">米咖生活</string>
    <string name="errcode_success">发送成功</string>

    <string name="errcode_cancel">发送取消</string>

    <string name="errcode_deny">发送被拒绝</string>

    <string name="errcode_unknown">发送返回</string>

    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="pull_to_refresh">loading...</string>
    <string name="release_to_refresh">refresh...</string>
    <string name="lastUpdateTime">最后更新时间:</string>
    <string name="locationError">当前部分手机将无法定位，开发人员正在抢救中...</string>
    <string name="money_detail">资金明细</string>
    <string name="user_detail">账户明细</string>
    <string name="money_add">充值</string>
    <string name="money_get">提现</string>
    <string name="money_charge">资金管理</string>
    <string name="order_home">子成自营</string>

    <string name="zcb">子成币</string>
    <string name="cannot_buy">此产品暂不可购买</string>
    <string name="cannot_getName">正在获取产品名称</string>
    <string name="noMore">已无更多数据</string>

    <string name="continueForOnePurchase">进行中...</string>
    <string name="hasOKForOnePurchase">已揭晓</string>
    <string name="slowTimeAnnoucement">限时揭晓</string>
    <string name="cloudShopDetail">云购详情</string>
    <string name="allPublic">所有商品</string>
    <string name="lastPublish">最新揭晓</string>
    <string name="shortTimeForRare">限时夺宝</string>
    <string name="getRareAndShowOrder">夺宝晒单</string>
    <string name="beginnerGuide">新手指南</string>
    <string name="accountRecharge">账户充值</string>
    <string name="personalSettings">个人设置</string>
    <string name="personalHome">个人主页</string>
    <string name="shopCar">购物车</string>
    <string name="allProduction">一元购商品</string>
    <string name="myShowOrder">我的晒单</string>

    <string name="notDevelop">该功能暂未开放</string>
    <string name="getCode">获取验证码</string>

    <string name="someError">未知错误，请联系客服</string>
    <string name="locationInfo">  正在定位，若长时间未跳转请手动进入应用设置，赋予定位权限。</string>

    <string name="testLongText_0">习近平指出，自2014年中密建立相互尊重、共同发展的战略伙伴关系以来，双方深化政治互信，加强互利合作，两国关系取得新的重要发展。中国一贯主张，国家不分大小、贫富、强弱，都是国际社会平等成员，都应该相互尊重，和平相处，互利合作，共同发展。中方视密克罗尼西亚联邦为太平洋岛国地区的好朋友、好伙伴，愿同密方保持高层及各级别交往，尊重彼此核心利益和重大关切，夯实两国关系的政治基础。双方要深挖潜力，扎实推进旅游、农业、渔业、基础设施等领域合作。我们欢迎密方参与“一带一路”建设，实现共赢共享发展。中方愿同密方拓展文化、教育、青年等领域和地方交流与合作，增进两国人民的相互了解和友谊。</string>
    <string name="testLongText_1">克里斯琴表示，密中建交28年来，双边关系取得强劲发展，这得益于双方始终尊重彼此独立和主权完整。密克罗尼西亚政府坚定奉行一个中国政策，支持中方在气候变化、全球化等重大问题上立场，愿与中方在应对全球性挑战方面密切沟通协调。密方感谢中国多年来对密克罗尼西亚经济社会发展给予的支持和帮助，高度赞赏中方“一带一路”倡议，愿积极参与这一框架下的务实合作。</string>
    <string name="testLongText_2">“我们期待Mark能进一步整合全公司资源，驱动资讯与公司相关内容分发平台的合作与协同，加快OMG产品技术升级，并且加大OMG和IEG在内容和娱乐生态方面的战略联动。”</string>
    <string name="testImg">http://test.zcgj168.com/images/201606/goods_img/1093_G_1467243671622.jpg</string>
    <string name="testUrl">https://www.tmall.com/</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="deliver_time_1">随时都可以</string>
    <string name="deliver_time_2">工作日（周一至周五）</string>
    <string name="deliver_time_3">双休日（周六至周日）</string>

    <string name="shareTitle">正在定位，若长时间未跳转请手动进入应用设置，选择子成100，赋予定位权限.</string>

    <string name="filter_com">综合排序</string>
    <string name="filter_money_desc">价格从高到低</string>
    <string name="filter_money_asc">价格从低到高</string>
    <string name="filter_reback">返利比</string>
    <string name="filter_number_desc">销量从高到低</string>
    <string name="filter_number_asc">销量从低到高</string>
    <string name="filter_desc">价格从高到低</string>
    <string name="filter_esc">价格从低到高</string>
    <string name="filter_number">销量排序</string>

    <string-array name="testArray">
        <item>测试的数据罢了</item>
        <item>手动进入应用设</item>
        <item>司资源，驱动资讯</item>
        <item>伙伴关系以来，双方深</item>
        <item>长时间未跳转请手动进入应用设置</item>
        <item>该功能暂未开放</item>
        <item>随时都可以</item>
        <item>工作日（周一至周五）</item>
        <item>双休日（周六至周日）</item>
        <item>个人主页</item>
        <item>2</item>
        <item>未知错误，请联系客服</item>
        <item>手动进入应用设</item>
        <item>司资源，驱动资讯</item>
        <item>伙伴关系以来，双方深</item>
        <item>长时间未跳转请手动进入应用设置</item>
        <item>该功能暂未开放</item>
        <item>随时都可以</item>
        <item>工作日（周一至周五）</item>
        <item>双休日（周六至周日）</item>
        <item>个人主页</item>
        <item>2</item>
        <item>未知错误，请联系客服</item>
        <item>手动进入应用设</item>
        <item>司资源，驱动资讯</item>
        <item>伙伴关系以来，双方深</item>
        <item>长时间未跳转请手动进入应用设置</item>
        <item>该功能暂未开放</item>
        <item>随时都可以</item>
        <item>工作日（周一至周五）</item>
        <item>双休日（周六至周日）</item>
        <item>个人主页</item>
        <item>2</item>
        <item>未知错误，请联系客服</item>
        <item>手动进入应用设</item>
        <item>司资源，驱动资讯</item>
        <item>伙伴关系以来，双方深</item>
        <item>长时间未跳转请手动进入应用设置</item>
        <item>该功能暂未开放</item>
        <item>随时都可以</item>
        <item>工作日（周一至周五）</item>
        <item>双休日（周六至周日）</item>
        <item>个人主页</item>
        <item>2</item>
        <item>未知错误，请联系客服</item>
        <item>数据加载完毕</item>
    </string-array>
</resources>
