<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_White">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/SuperDeliverGJColor"
            android:dividerPadding="1dp"
            android:showDividers="middle">

            <RadioButton
                android:id="@+id/rb_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/radio_address_default"
                android:padding="10dp"
                android:text="@string/filter_com"
                android:textColor="@color/tv_Gray"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_money_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/radio_address_default"
                android:padding="10dp"
                android:text="@string/filter_money_desc"
                android:textColor="@color/tv_Gray"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_money_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/radio_address_default"
                android:padding="10dp"
                android:text="@string/filter_money_asc"
                android:textColor="@color/tv_Gray"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_number_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/radio_address_default"
                android:padding="10dp"
                android:text="@string/filter_number_desc"
                android:textColor="@color/tv_Gray"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_number_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableRight="@drawable/radio_address_default"
                android:padding="10dp"
                android:text="@string/filter_number_asc"
                android:textColor="@color/tv_Gray"
                android:textSize="16sp" />
        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView260"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>