<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wzzc.other_view.BasicTitleView
        android:id="@+id/basicTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/OnepurchaseIndexSmallPadding">

        <TextView
            android:id="@+id/btn_money_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/OnepurchaseIndexSmallPadding"
            android:tag="3"
            android:text="@string/money_detail"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_user_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/OnepurchaseIndexSmallPadding"
            android:tag="4"
            android:text="@string/user_detail"
            android:textColor="@color/tv_Red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_money_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/OnepurchaseIndexSmallPadding"
            android:tag="5"
            android:text="@string/money_add"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_money_get"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/OnepurchaseIndexSmallPadding"
            android:tag="6"
            android:text="@string/money_get"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/OnepurchaseIndexSmallPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/OnepurchaseIndexSmallPadding"
            android:text="账户余额 :"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lab_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/OnepurchaseIndexSmallPadding"
            android:singleLine="true"
            android:textColor="#ff0000"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/contain_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/OnepurchaseIndexSmallPadding" />
</LinearLayout>