<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <com.wzzc.other_view.BasicTitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_money_detail"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/money_detail"
                android:tag="3"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/tv_Red" />

            <TextView
                android:text="@string/user_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_user_detail"
                android:layout_weight="1"
                android:background="@color/white"
                android:tag="4"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:text="@string/money_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_money_add"
                android:layout_weight="1"
                android:background="@color/white"
                android:tag="5"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:text="@string/money_get"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_money_get"
                android:layout_weight="1"
                android:background="@color/white"
                android:tag="6"
                android:gravity="center"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账户余额 :" />

            <TextView
                android:id="@+id/lab_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="操作时间" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="类型" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="金额" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="状态" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="操作" />
        </LinearLayout>

        <com.wzzc.other_view.extendView.ExtendListView
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_collection"
            android:divider="@null"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scrollbars="none"></com.wzzc.other_view.extendView.ExtendListView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
